# ndtensor

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: crates.yml  rust.yml
ndtensor/: Cargo.toml
ndtensor/src/: context.rs  errors.rs  lib.rs  macros.rs  specs.rs  tensor.rs  utils.rs
ndtensor/src/error/: err.rs  mod.rs
ndtensor/src/error/kinds/: inverse.rs
ndtensor/src/grad/: context.rs  grad.rs  mod.rs
ndtensor/src/grad/ops/: expr.rs  mod.rs  wrapper.rs
ndtensor/src/impls/: approx.rs  create.rs  grad.rs  linalg.rs  ops.rs  reshape.rs  tensor.rs
ndtensor/src/impls/views/: dimensional.rs  misc.rs  numerical.rs  owned.rs  raw.rs  view.rs
ndtensor/src/macros/: build.rs  create.rs  view.rs
ndtensor/src/ops/: expr.rs  mod.rs  wrapper.rs
ndtensor/src/traits/: build.rs  convert.rs  mod.rs  ndtensor.rs  scalar.rs
ndtensor/src/types/: gradient.rs  kinds.rs
ndtensor/tests/: approx.rs  arith.rs  backward.rs  default.rs  misc.rs  tensor.rs
