[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = ["data-structures", "math", "science"]
description = "ndtensor is an n-dimensional tensor library for Rust."
edition = "2021"
homepage = "https://github.com/FL03/ndtensor/wiki"
keywords = ["tensor"]
license = "Apache-2.0"
repository = "https://github.com/FL03/ndtensor"
readme = "README.md"
version = "0.1.1"
# version = "0.1.0-alpha"

[workspace]
default-members = [
    "ndtensor",
]

exclude = [ 
    "acme"
]

members = [
    "ndtensor",
]
resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
