[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ndtensor"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "approx",
    "std",
]

full = [
    "default",
    "serde"
]

alloc = [
    "num/alloc",
    "serde?/alloc",
]

approx = [
    "dep:approx",
    "ndarray/approx-0_5",
]

blas = [
    "ndarray/blas"
]

std = [
    "acme/std",
    "ndarray/std",
    "num/std",
]

serde = [
    "dep:serde",
    "ndarray/serde-1",
    "acme/serde",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[[test]]
name = "approx"
required-features = ["approx"]

[[test]]
name = "backward"
required-features = ["approx"]

[[test]]
name = "tensor"
required-features = ["approx", "std"]


[build-dependencies]

[dependencies]
itertools = "0.13"
paste = "1"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.26"}

[dependencies.acme]
branch = "v0.3.2-dev"
git = "https://github.com/FL03/acme.git"
version = "0.3.2"

[dependencies.approx]
optional = true
version = "0.5"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.ndarray]
default-features = false
version = "0.15"

[dependencies.num]
default-features = false
version = "0.4"

[dev-dependencies]
lazy_static = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
